test/pass/enums_and_variants/variant_multi.lly
enum class Option[A] { Some(A, A), None }

var v = Some(1, 2)

match v: {
    case Some(s1, s2):
    case None:
}
