test/fail/match/match_bad_decompose_attempt.lly
#[
SyntaxError: Expected ':', not '('.
    from match_bad_decompose_attempt.lly:9:
]#

var v = None

match v: {
    case None(a):
    case Some(s):
}
